# bevy_bullet_dynamics

./: .gitignore  Cargo.toml  README.md  TODO.md  TODO2.md  renet2.md  weaponv1_rus.md  weaponv2_rus.md
benches/: projectile_benchmark.rs
examples/: advanced_shooting_2d.rs  basic_shooting.rs  basic_shooting_2d.rs  fps_example.rs  grenades.rs  headless_simulation.rs  multiplayer.rs  surfaces_2d.rs
src/: advanced_shooting_2d_tests.rs  basic_shooting_2d_tests.rs  components.rs  comprehensive_tests.rs  events.rs  lib.rs  network.rs  resources.rs  surface_interactions_tests.rs  test_advanced_shooting_2d.rs  types.rs
src/network/: client.rs  mod.rs  protocol.rs  server.rs
src/systems/: accuracy.rs  collision.rs  debug.rs  kinematics.rs  logic.rs  mod.rs  surface.rs  vfx.rs
