[package]
name = "bevy_bullet_dynamics"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-precision ballistics simulation plugin for Bevy 0.18, supporting various weapon types from pistols to sniper rifles, bows, grenades, with 2D/3D support and client-server architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bevy_bullet_dynamics"
keywords = ["bevy", "gamedev", "physics", "ballistics", "weapons"]
categories = ["game-engines", "simulation"]

[features]
default = ["dim3"]
dim2 = ["avian2d"]
dim3 = ["avian3d"]
netcode = []

[dependencies]
bevy = "0.18"
avian3d = { version = "0.5", optional = true }
avian2d = { version = "0.5", optional = true }
rand = "0.9"
rand_distr = "0.5"
serde = "1.0.228"
bincode = "1.3"
bevy_renet2 = { git = "https://github.com/UkoeHb/renet2", version = "0.13.1" }
renet2 = { git = "https://github.com/UkoeHb/renet2", version = "0.13.0" }

[dev-dependencies]
criterion = "0.5"
renet2_netcode = { git = "https://github.com/UkoeHb/renet2" }

[[bench]]
name = "projectile_benchmark"
harness = false

[[example]]
name = "basic_shooting"
path = "examples/basic_shooting.rs"

[[example]]
name = "grenades"
path = "examples/grenades.rs"

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"
required-features = ["netcode"]
