[package]
name = "bevy_bullet_dynamics"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-precision ballistics simulation plugin for Bevy 0.18, supporting various weapon types from pistols to sniper rifles, bows, grenades, with 2D/3D support and client-server architecture"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/bevy_bullet_dynamics"
keywords = ["bevy", "gamedev", "physics", "ballistics", "weapons"]
categories = ["game-engines", "simulation"]

[features]
default = ["dim3"]
dim2 = ["avian2d"]
dim3 = ["avian3d"]
netcode = []

[dependencies]
bevy = "0.18"
avian3d = { version = "0.5", optional = true }
avian2d = { version = "0.5", optional = true }
rand = "0.9"
rand_distr = "0.5"
serde = "1.0.228"
bincode = "1.3"
bevy_renet2 = { git = "https://github.com/UkoeHb/renet2", version = "0.13.1" }
renet2 = { git = "https://github.com/UkoeHb/renet2", version = "0.13.0" }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false }
renet2_netcode = { git = "https://github.com/UkoeHb/renet2" }

[[bench]]
name = "projectile_benchmark"
harness = false

[[example]]
name = "basic_shooting"
path = "examples/basic_shooting.rs"
required-features = ["dim3"]

[[example]]
name = "basic_shooting_2d"
path = "examples/basic_shooting_2d.rs"
required-features = ["dim2"]

[[example]]
name = "advanced_shooting_2d"
path = "examples/advanced_shooting_2d.rs"
required-features = ["dim2"]

[[example]]
name = "surfaces_2d"
path = "examples/surfaces_2d.rs"
required-features = ["dim2"]

[[example]]
name = "grenades"
path = "examples/grenades.rs"
required-features = ["dim3"]

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"
required-features = ["netcode", "dim3"]

[[example]]
name = "headless_simulation"
path = "examples/headless_simulation.rs"
required-features = ["dim3"]

[[example]]
name = "fps_example"
path = "examples/fps_example.rs"
required-features = ["dim3"]

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom_02 = { version = "^0.2", features = ["js"], package = "getrandom" }
getrandom_03 = { version = "^0.3", features = ["wasm_js"], package = "getrandom" }

# Enable high optimizations for dependencies (incl. Bevy) to reduce WASM size
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimization for WASM builds (used by bevy_cli or similar)
[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = "thin"
strip = "symbols"


